# ring-channel

./: .gitignore  Cargo.toml  config.toml  generate-openapi-doc.sh  main.py  pyproject.toml  redocly.yaml
duel-channel-model/: Cargo.toml
duel-channel-model/src/: lib.rs
duel-channel-model/src/battle/: mod.rs
duel-channel-model/src/message/: mod.rs  server.rs
duel-channel-model/src/request/: battle.rs  mod.rs
duel-channel-model/src/response/: mod.rs
migrations/: 20251020003225_init.sql  20251027214244_track_mobiums.sql  20251028004702_add_user_flags.sql  20251028214041_add_mmr_table.sql  20251107214036_add_participant_extra_info.sql  20251111034146_add_chat_messages.sql  20260407012506_create_rating_extra.sql  20260520003753_create_map_bans.sql
model/: Cargo.toml
model/src/: battle.rs  chat.rs  lib.rs  player.rs  server.rs  user.rs
model/src/battle/: mod.rs  player.rs
model/src/message/: client.rs  mod.rs  server.rs
model/src/request/: battle.rs  chat.rs  mod.rs  player.rs  server.rs
openapi/: openapi.yaml
src/: battle.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  player.rs  session.rs  ws.rs
src/app/: error.rs  mod.rs
src/auth/: api_key.rs  mod.rs  oauth2.rs
src/model/: error.rs  mod.rs
src/player/: mod.rs
src/player/mmr/: find_matchups.sql  glicko2.rs  mod.rs  openskill.rs
src/room/: mod.rs  protocol.rs
src/routes/: auth.rs  battle.rs  chat.rs  mod.rs  player.rs  server.rs  ws.rs
src/routes/battle/: mod.rs  placement.rs  player.rs  wager.rs
src/routes/user/: auth.rs  mod.rs
src/user/: bot.rs  mod.rs
