[package]
name = "ring-channel"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition.workspace = true

description = "Backend for duelchannel.ringrace.rs"

[dependencies]
ring-channel-model = { workspace = true }
anyhow = "1"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-server = "0.7"
chrono = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from", "deref"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["env", "toml"] }
futures-util = "0.3"
http = "1"
serde = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-deflate"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_repr = { workspace = true }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[workspace]
resolver = "3"
members = ["model"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = "2"
ring-channel-model = { path = "./model" }
num_enum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
