[package]
name = "duel-channel-model"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition.workspace = true

[dependencies]
chrono = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "deref"] }
